Various parser fixes - consistently reporting the start of a token on parse errors Infinite loop detection on parse failures